Exception Handling Complete Prodjct

--- a/SeleniumWebdriver_Webelement/test-output/emailable-report.html
+++ b/SeleniumWebdriver_Webelement/test-output/emailable-report.html
@@ -8,15 +8,24 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">87</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">134</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Test2</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Test3</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t3">Test4</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11</td><td></td><td></td></tr>
+<tr><td><a href="#t4">Test5</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">5</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">177</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.selenium.testNG.Class17_TestNG</td><td><a href="#m0">test1</a></td><td rowspan="1">1746270949246</td><td rowspan="1">8</td></tr><tr class="passedeven"><td><a href="#m1">test2</a></td><td rowspan="1">1746270949263</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m2">test3</a></td><td rowspan="1">1746270949266</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m3">test4</a></td><td rowspan="1">1746270949276</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m4">test5</a></td><td rowspan="1">1746270949282</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.selenium.testNG.Class20_TestNG</td><td><a href="#m0">method1</a></td><td rowspan="1">1746527437462</td><td rowspan="1">22</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Test2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.selenium.testNG.Class20_TestNG</td><td><a href="#m1">method1</a></td><td rowspan="1">1746527437738</td><td rowspan="1">1</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Test3 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.selenium.testNG.Class20_TestNG</td><td><a href="#m2">method1</a></td><td rowspan="1">1746527437759</td><td rowspan="1">2</td></tr></tbody>
+<tbody id="t3"><tr><th colspan="4">Test4 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.selenium.testNG.Class20_TestNG</td><td><a href="#m3">method1</a></td><td rowspan="1">1746527437778</td><td rowspan="1">3</td></tr></tbody>
+<tbody id="t4"><tr><th colspan="4">Test5 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.selenium.testNG.Class20_TestNG</td><td><a href="#m4">method1</a></td><td rowspan="1">1746527437821</td><td rowspan="1">5</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.selenium.testNG.Class17_TestNG#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.selenium.testNG.Class17_TestNG#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.selenium.testNG.Class17_TestNG#test3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.selenium.testNG.Class17_TestNG#test4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.selenium.testNG.Class17_TestNG#test5</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test1</h2><h3 id="m0">com.selenium.testNG.Class20_TestNG#method1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>India</td><td>Shivam</td><td>9999999999</td><td>32</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test2</h2><h3 id="m1">com.selenium.testNG.Class20_TestNG#method1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>India</td><td>Suraj</td><td>8888888888</td><td>32</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test3</h2><h3 id="m2">com.selenium.testNG.Class20_TestNG#method1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>India</td><td>Deepak</td><td>7777777777</td><td>32</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test4</h2><h3 id="m3">com.selenium.testNG.Class20_TestNG#method1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>India</td><td>Vikas</td><td>6666666666</td><td>32</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test5</h2><h3 id="m4">com.selenium.testNG.Class20_TestNG#method1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>UK</td><td>Anil</td><td>5555555555</td><td>32</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
