--- a/SeleniumWebdriver_Webelement/test-output/old/Suite/methods-alphabetical.html
+++ b/SeleniumWebdriver_Webelement/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="df66b6">  <td>25/05/03 16:45:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Class17_TestNG.test1()[pri:1, instance:com.selenium.testNG.Class17_TestNG@7586beff]">test1</td> 
-  <td>main@1212772528</td>   <td></td> </tr>
-<tr bgcolor="df66b6">  <td>25/05/03 16:45:10</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Class17_TestNG.test3()[pri:3, instance:com.selenium.testNG.Class17_TestNG@7586beff]">test3</td> 
-  <td>main@1212772528</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>25/05/06 16:00:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Class20_TestNG.method1(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.selenium.testNG.Class20_TestNG@5542c4ed]">method1</td> 
+  <td>main@1355457888</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>25/05/06 16:00:37</td>   <td>278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Class20_TestNG.method1(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.selenium.testNG.Class20_TestNG@77f1baf5]">method1</td> 
+  <td>main@1355457888</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>25/05/06 16:00:37</td>   <td>299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Class20_TestNG.method1(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.selenium.testNG.Class20_TestNG@55b0dcab]">method1</td> 
+  <td>main@1355457888</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>25/05/06 16:00:37</td>   <td>318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Class20_TestNG.method1(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.selenium.testNG.Class20_TestNG@37ceb1df]">method1</td> 
+  <td>main@1355457888</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>25/05/06 16:00:37</td>   <td>361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Class20_TestNG.method1(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.selenium.testNG.Class20_TestNG@69453e37]">method1</td> 
+  <td>main@1355457888</td>   <td></td> </tr>
 </table>
